@startuml model

package Inutilisé {
            
            class MotCle {
    
            }
    
            class TexteAvecTrous {
    
            }
    
            class InterfaceFiche {
    
            }

            class IconFiche {
    
            }

            class Translator {
    
            }
    
}

package Model {

    class Fiche {

    }

    class Enonce {

    }

    class Question {

    }

    class ModelReveasy {

    }

    Fiche "1" -- "*" Enonce : appartient à 
    Fiche "1" -- "*" Question : appartient à

    ModelReveasy "1" -- "*" Fiche : contient

    

}

package GUI {

    class IHM {

    }

    VueMesFiches "1" --  IHM
    VueEditeur "1" --  IHM :  affiche
    
    Controleur "1" -- IHM

    MenuLateral "1" --  IHM :  contient

    ActionMenuSelector "1" --  MenuLateral
    ActionEnregistrer "1" --  VueEditeur
    ActionQuitter "1" --  Controleur


}


class Reveasy <<Classe principale>> {
}

ModelReveasy "1" --  IHM : utilise

Reveasy "1" --  IHM : instancie
